--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
-    "stripe": "^12.17.0"
+    "stripe": "^12.17.0",
+    "uuid": "^9.0.0"
   }
 }
